@@ -125,6 +125,8 @@
 	(_X->node_state & NODE_STATE_NO_RESPOND)
 #define IS_NODE_POWER_SAVE(_X)		\
 	(_X->node_state & NODE_STATE_POWER_SAVE)
+#define IS_NODE_POWER_UP(_X)		\
+	(_X->node_state & NODE_STATE_POWER_UP)
 #define IS_NODE_FAIL(_X)		\
 	(_X->node_state & NODE_STATE_FAIL)
 #define IS_NODE_POWER_UP(_X)		\
